fixed alignement on input bars

--- a/style.css
+++ b/style.css
@@ -301,33 +301,26 @@ h1, h2, h3, h4, h5, h6, button {
 }
 
 .inputContainer {
+    text-align: center;
     margin-top: 1vh;
     width: 90%;
 }
 
 
 #zipcodeSearch, #searchRadiusInput {
-    position: absolute;
-    left: 50%;
-    transform: translate(-50%);
-    z-index: 10;
-    margin-top: 3%;
-    width: 31%;
+  
+    width: 40%;
     background-color: rgba(255,255,255, 0.9);
     border: none;
     padding: 6px;
 }
+
 #searchRadiusInput {
     left: 77%;
-    width: 20%;
+    width: 25%;
 }
 .zipcodeBtn {
     margin-left: 1vh;
-    position: absolute;
-    z-index: 9;
-    left: 92%;
-    transform: translate(-50%);
-    margin-top: 4.5%;
     color: white;
     background-color: green;
     border: none;
